@@ -13,21 +13,19 @@ import cs3500.animator.model.qualities.positions.Position2D;
  */
 public class Motion implements IMotion {
 
-  private int parent;
-  private Keyframe firstKeyframe;
-  private Keyframe lastKeyframe;
+  private int starttime;
+  private int endtime;
+  private Keyframe keyframe;
 
   /**
    * Takes an IMotion, then sets this class' fields based on that.
+   *
    * @param motion The IMotion that will be used to set this class' fields.
    */
   public Motion(IMotion motion) {
-    this.firstKeyframe = new KeyframeImpl(motion.getBeginTime(),
-        new Position2D(motion.getNewX(), motion.getNewY()),
-        new Size2D(motion.getNewLength(), motion.getNewHeight()),
-        new TextureImpl(motion.getColor().getR(), motion.getColor().getG(),
-            motion.getColor().getB(), 1));
-    this.lastKeyframe = new KeyframeImpl(motion.getEndTime(),
+    this.starttime = motion.getBeginTime();
+    this.endtime = motion.getBeginTime();
+    this.keyframe = new KeyframeImpl(motion.getBeginTime(),
         new Position2D(motion.getNewX(), motion.getNewY()),
         new Size2D(motion.getNewLength(), motion.getNewHeight()),
         new TextureImpl(motion.getColor().getR(), motion.getColor().getG(),
@@ -36,36 +34,35 @@ public class Motion implements IMotion {
 
   /**
    * Takes a Motion--a different kind of Motion, mind you--then sets this class' fields based on
-   *  that.
+   * that.
+   *
    * @param motion The Motion that will be used to set this class' fields.
    */
   public Motion(cs3500.animator.model.Motion motion) {
-    this.firstKeyframe = new KeyframeImpl(motion.getFirstTick(),
+    this.starttime = motion.getFirstTick();
+    this.endtime = motion.getEndFrame().getTick();
+    this.keyframe = new KeyframeImpl(motion.getFirstTick(),
         new Position2D(motion.getFirstX(), motion.getFirstY()),
         new Size2D(motion.getFirstWidth(), motion.getFirstHeight()),
         new TextureImpl(motion.getStartFrame().getTexture().getRed(),
             motion.getStartFrame().getTexture().getGreen(),
             motion.getStartFrame().getTexture().getBlue(), 1));
-    this.lastKeyframe = new KeyframeImpl(motion.getEndFrame().getTick(),
-        new Position2D(motion.getEndFrame().getTick(), motion.getEndFrame().getFirstY()),
-        new Size2D(motion.getEndFrame().getFirstWidth(), motion.getEndFrame().getFirstHeight()),
-        new TextureImpl(motion.getEndFrame().getTexture().getRed(),
-            motion.getEndFrame().getTexture().getGreen(),
-            motion.getEndFrame().getTexture().getBlue(), 1));
   }
 
   /**
    * Takes a keyframe, then sets this class' fields based on that.
+   *
    * @param keyframe The Keyframe that will be used to set this class' fields.
    */
   public Motion(Keyframe keyframe) {
-    this.firstKeyframe = keyframe;
-    this.lastKeyframe = keyframe;
+    this.starttime = keyframe.getTick();
+    this.keyframe = keyframe;
   }
 
   /**
    * Takes several different variables, then uses them to construct keyframes, which are then used
-   *  to set this class' variables.
+   * to set this class' variables.
+   *
    * @param tick The tick this motion starts at.
    * @param name The name of the shape this tick is assigned to.
    * @param x The x-location of the end of this motion.
@@ -75,91 +72,91 @@ public class Motion implements IMotion {
    * @param color The color of this shape at the end of this motion.
    */
   public Motion(int tick, int name, int x, int y, int w, int h, Color color) {
-    this.lastKeyframe = new KeyframeImpl(tick, new Position2D(x, y), new Size2D(w, h),
+    this.keyframe = new KeyframeImpl(tick, new Position2D(x, y), new Size2D(w, h),
         new TextureImpl(color.getR(), color.getG(), color.getB(), 1));
-    this.firstKeyframe = this.lastKeyframe;
-    this.parent = name;
   }
 
   @Override
   public void setLocation(int newX, int newY) {
-    this.lastKeyframe = new KeyframeImpl(lastKeyframe.getTick(), new Position2D(newX, newY),
-        lastKeyframe.getSize(), lastKeyframe.getTexture());
+    this.keyframe = new KeyframeImpl(keyframe.getTick(), new Position2D(newX, newY),
+        keyframe.getSize(), keyframe.getTexture());
   }
 
   @Override
   public void setSize(int newLength, int newHeight) {
-    this.lastKeyframe = new KeyframeImpl(lastKeyframe.getTick(), lastKeyframe.getPosition(),
-        new Size2D(newLength, newHeight), lastKeyframe.getTexture());
+    this.keyframe = new KeyframeImpl(keyframe.getTick(), keyframe.getPosition(),
+        new Size2D(newLength, newHeight), keyframe.getTexture());
   }
 
   @Override
   public void setColor(Color color) {
-    this.lastKeyframe = new KeyframeImpl(lastKeyframe.getTick(), lastKeyframe.getPosition(),
-        lastKeyframe.getSize(), new TextureImpl(color.getR(), color.getG(), color.getB(), 1));
+    this.keyframe = new KeyframeImpl(keyframe.getTick(), keyframe.getPosition(),
+        keyframe.getSize(), new TextureImpl(color.getR(), color.getG(), color.getB(), 1));
   }
 
   @Override
   public String describe() {
-    return "motion " + parent + " " + firstKeyframe.toFile() + " " + lastKeyframe.toFile();
+    throw new UnsupportedOperationException(
+        "Implemented for compatibility purposes, but unused. Returning SVG-formatted descriptions "
+            + "of a Motion is something the view should handle, not the Motion proper.");
   }
 
   @Override
   public boolean timeIsIn(int time) {
-    return firstKeyframe.getTick() <= time && time <= lastKeyframe.getTick();
+    return starttime <= time && time <= endtime;
   }
 
   @Override
   public boolean overlapping(IMotion other) {
-    return other.timeIsIn(firstKeyframe.getTick()) || other.timeIsIn(lastKeyframe.getTick());
+    return other.timeIsIn(starttime) || other.timeIsIn(endtime);
   }
 
   @Override
   public int getBeginTime() {
-    return firstKeyframe.getTick();
+    return starttime;
   }
 
   @Override
   public int getEndTime() {
-    return lastKeyframe.getTick();
+    return endtime;
   }
 
   @Override
   public int getNewX() {
-    return ((int) lastKeyframe.getFirstX());
+    return ((int) keyframe.getFirstX());
   }
 
   @Override
   public int getNewY() {
-    return ((int) lastKeyframe.getFirstY());
+    return ((int) keyframe.getFirstY());
   }
 
   @Override
   public int getNewLength() {
-    return ((int) lastKeyframe.getFirstWidth());
+    return ((int) keyframe.getFirstWidth());
   }
 
   @Override
   public int getNewHeight() {
-    return ((int) lastKeyframe.getFirstWidth());
+    return ((int) keyframe.getFirstWidth());
   }
 
   @Override
   public Color getColor() {
-    return new Color(((int) lastKeyframe.getTexture().getRed()),
-        ((int) lastKeyframe.getTexture().getBlue()), ((int) lastKeyframe.getTexture().getGreen()));
+    return new Color(((int) keyframe.getTexture().getRed()),
+        ((int) keyframe.getTexture().getBlue()), ((int) keyframe.getTexture().getGreen()));
   }
 
   @Override
   public String describeBeginAttributes() {
-    throw new IllegalArgumentException(
+    throw new UnsupportedOperationException(
         "Implemented for compatibility purposes, but unused. Returning SVG-formatted descriptions "
             + "of a Motion is something the view should handle, not the Motion proper.");
   }
 
   @Override
   public String describeBeginAttributesEllipse() {
-    throw new IllegalArgumentException(
+    throw new UnsupportedOperationException(
         "Implemented for compatibility purposes, but unused. Returning SVG-formatted descriptions "
             + "of a Motion is something the view should handle, not the Motion proper.");
   }
