@@ -5,6 +5,8 @@ import cs3500.animator.model.AnimationImpl;
 import cs3500.animator.model.KeyframeImpl;
 import cs3500.animator.model.MotionImpl;
 import cs3500.animator.model.Shape;
+import cs3500.animator.model.ShapeImpl;
+import cs3500.animator.model.Shapes;
 import cs3500.animator.model.qualities.color.TextureImpl;
 import cs3500.animator.model.qualities.dimensions.Size2D;
 import cs3500.animator.model.qualities.positions.Position2D;
@@ -17,13 +19,23 @@ import java.util.ArrayList;
 public class ShapeToIShape implements IShape {
 
   private Shape shape;
+  private int t;
+  private double x;
+  private double y;
+  private double w;
+  private double h;
+  private double r;
+  private double g;
+  private double b;
 
   /**
    * Simply takes a Shape, and sets this class' field to be that Shape.
+   *
    * @param shape The Shape that will be treated like an IShape.
    */
-  ShapeToIShape(Shape shape) {
+  public ShapeToIShape(Shape shape) {
     this.shape = shape;
+    updateFields();
   }
 
   @Override
@@ -39,6 +51,7 @@ public class ShapeToIShape implements IShape {
             new Size2D(motion.getNewHeight(), motion.getNewLength()),
             new TextureImpl(motion.getColor().getR(), motion.getColor().getG(),
                 motion.getColor().getB(), 1))));
+    updateFields();
   }
 
   @Override
@@ -46,6 +59,7 @@ public class ShapeToIShape implements IShape {
     for (IMotion motion : motions) {
       addMotion(motion);
     }
+    updateFields();
   }
 
   @Override
@@ -90,15 +104,17 @@ public class ShapeToIShape implements IShape {
     Animation anim = CreateTempBuilder();
     anim.getBuilder().deleteKeyFrame(shape.getName(), shape.getFirstTick());
     this.shape = anim.getShapes().get(shape.getName());
+    updateFields();
   }
 
   @Override
   public void editKeyFrame(int index, IMotion keyFrame) {
     Animation anim = CreateTempBuilder();
-    anim.getBuilder().setKeyFrame(shape.getName(), keyFrame.getBeginTime(), keyFrame.getNewX(),
+    anim.getBuilder().setKeyFrame(shape.getName(), t, keyFrame.getNewX(),
         keyFrame.getNewY(), keyFrame.getNewLength(), keyFrame.getNewHeight(),
         keyFrame.getColor().getR(), keyFrame.getColor().getG(), keyFrame.getColor().getB());
     this.shape = anim.getShapes().get(shape.getName());
+    updateFields();
   }
 
   @Override
@@ -106,6 +122,7 @@ public class ShapeToIShape implements IShape {
     Animation anim = CreateTempBuilder();
     anim.getBuilder().addKeyframe(shape.getName(), tick);
     this.shape = anim.getShapes().get(shape.getName());
+    updateFields();
     for (cs3500.animator.model.Motion motion : this.shape.getMotions()) {
       if (motion.getFirstTick() == tick || motion.getEndFrame().getTick() == tick) {
         return new Motion(motion);
@@ -119,9 +136,15 @@ public class ShapeToIShape implements IShape {
 
   @Override
   public IShape getFrame(double tick) {
-    throw new UnsupportedOperationException("This type of logic is not compatible with the system "
-        + "we're using. We can't return a Shape's state at a single moment in time. We could"
-        + "return the Keyframe for that moment, but this method isn't even used, so we'll pass.");
+    int inttick = ((int) tick);
+    this.x = ((int) shape.getPositionAt(inttick).getX());
+    this.y = ((int) shape.getPositionAt(inttick).getY());
+    this.w = ((int) shape.getSizeAt(inttick).getWidth());
+    this.h = ((int) shape.getSizeAt(inttick).getHeight());
+    this.r = ((int) shape.getColorAt(inttick).getRed());
+    this.g = ((int) shape.getColorAt(inttick).getGreen());
+    this.b = ((int) shape.getColorAt(inttick).getBlue());
+    return this;
   }
 
   @Override
@@ -131,34 +154,33 @@ public class ShapeToIShape implements IShape {
 
   @Override
   public int getX() {
-    return ((int) this.shape.getFirstX());
+    return ((int) this.x);
   }
 
   @Override
   public int getY() {
-    return ((int) this.shape.getFirstY());
+    return ((int) this.y);
   }
 
   @Override
   public int getWidth() {
-    return ((int) this.shape.getFirstWidth());
+    return ((int) this.w);
   }
 
   @Override
   public int getHeight() {
-    return ((int) this.shape.getFirstHeight());
+    return ((int) this.h);
   }
 
   @Override
   public Color getColor() {
-    return new Color(((int) this.shape.getColorAt(0).getRed()),
-        ((int) this.shape.getColorAt(0).getGreen()),
-        ((int) this.shape.getColorAt(0).getBlue()));
+    return new Color(((int) this.r), ((int) this.g), ((int) this.b));
   }
 
   /**
    * Creates a temporary builder to enable changes to individual Shapes, since our original code
    * only supported keyframe-altering functions on the Animation level.
+   *
    * @returns the animation with the shape, and the shape's motions, added to it.
    */
   private Animation CreateTempBuilder() {
@@ -168,5 +190,20 @@ public class ShapeToIShape implements IShape {
       anim.getShapes().get(shape.getName()).addMotion(motion);
     }
     return anim;
+  }
+
+  /**
+   * Updates the shape's fields to be accurate to the new first shape, just in case its first
+   * motion has been changed.
+   */
+  private void updateFields() {
+    this.t = shape.getFirstTick();
+    this.x = shape.getFirstX();
+    this.y = shape.getFirstY();
+    this.w = shape.getFirstWidth();
+    this.h = shape.getFirstHeight();
+    this.r = shape.getFirstRed();
+    this.g = shape.getFirstBlue();
+    this.b = shape.getFirstGreen();
   }
 }
